objects/HealthCloudGA__EhrCarePlanActivity__c.object
<CustomObject>
    <fields>
        <fullName>HealthCloudGA__ActionsResulting__c</fullName>
        <label>Actions Resulting</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__ActivityPeriod__c</fullName>
        <description>When activity is to occur</description>
        <label>Activity Period</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__ActivitySchedule__c</fullName>
        <description>When activity is to occur</description>
        <label>Activity Schedule</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__CarePlan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Care Plan</label>
        <referenceTo>HealthCloudGA__EhrCarePlan__c</referenceTo>
        <relationshipLabel>Care Plan Activities</relationshipLabel>
        <relationshipName>CarePlanActivities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Category__c</fullName>
        <label>Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__CodeLabel__c</fullName>
        <label>Code Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__CodeSystem__c</fullName>
        <description>Identity of the terminology system</description>
        <label>Code System</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Code__c</fullName>
        <description>Code Symbol in syntax defined by the system</description>
        <label>Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__DailyAmount__c</fullName>
        <label>Daily Amount</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Details__c</fullName>
        <label>Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__IsProhibited__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsProhibited</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__IsRestricted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsRestricted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__IsVisibleOnPatientCard__c</fullName>
        <description>If returns true, the record will appear on Patient Card</description>
        <formula>true</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IsVisibleOnPatientCard</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__LocationId__c</fullName>
        <externalId>true</externalId>
        <label>Location Identifier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__LocationLine1__c</fullName>
        <label>Location Line1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__LocationLine2__c</fullName>
        <label>Location Line2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__LocationName__c</fullName>
        <label>Location Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__LocationPostalCode__c</fullName>
        <label>Location Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__LocationStartDate__c</fullName>
        <label>Location Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__LocationState__c</fullName>
        <label>Location State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__LocationTelecom__c</fullName>
        <label>Location Telecom</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__LocationText__c</fullName>
        <label>Location Text</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__LocationType__c</fullName>
        <label>Location Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__LocationUse__c</fullName>
        <label>Location Use</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__ProductMedication255__c</fullName>
        <label>Product Medication 255</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__ProductMedication__c</fullName>
        <label>Product Medication</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__ProductSubstance255__c</fullName>
        <label>Product Substance 255</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__ProductSubstance__c</fullName>
        <label>Product Substance</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Quantity__c</fullName>
        <label>Quantity</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__RelatedCarePlanGoal1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Care Plan Goal1</label>
        <referenceTo>HealthCloudGA__EhrCarePlanGoal__c</referenceTo>
        <relationshipLabel>Care Plan Activities</relationshipLabel>
        <relationshipName>CarePlanActivities1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__RelatedCarePlanGoal2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Care Plan Goal2</label>
        <referenceTo>HealthCloudGA__EhrCarePlanGoal__c</referenceTo>
        <relationshipLabel>Care Plan Activities</relationshipLabel>
        <relationshipName>CarePlanActivities2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__RelatedCarePlanGoal3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Care Plan Goal3</label>
        <referenceTo>HealthCloudGA__EhrCarePlanGoal__c</referenceTo>
        <relationshipLabel>Care Plan Activities</relationshipLabel>
        <relationshipName>CarePlanActivities3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__RelatedEncounter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Encounter</label>
        <referenceTo>HealthCloudGA__EhrEncounter__c</referenceTo>
        <relationshipLabel>Care Plan Activities</relationshipLabel>
        <relationshipName>CarePlanActivities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__RelatedMedicationPrescription__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Medication Prescription</label>
        <referenceTo>HealthCloudGA__EhrMedicationPrescription__c</referenceTo>
        <relationshipLabel>Care Plan Activities</relationshipLabel>
        <relationshipName>CarePlanActivities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__SourceSystemModified__c</fullName>
        <description>When last updated</description>
        <label>Source System Modified</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__SourceSystem__c</fullName>
        <defaultValue>&quot;Health1-&quot;+$Organization.Id</defaultValue>
        <description>Identifies the system that created the record and owns update rights to it.</description>
        <inlineHelpText>Identifies the system that created the record and owns update rights to it. Defaults to Health1 for manually created records.</inlineHelpText>
        <label>Source System</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Status__c</fullName>
        <label>Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__TypeCode__c</fullName>
        <description>Symbol in syntax defined by the system</description>
        <label>Type Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__TypeLabel__c</fullName>
        <label>Type Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__TypeSystem__c</fullName>
        <description>Identity of the terminology system</description>
        <label>Type System</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>EHR Care Plan Activity</label>
    <nameField>
        <displayFormat>Acti-{0}</displayFormat>
        <label>EHR Care Plan Activity ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>EHR Care Plan Activities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>